<resources>
    <string name="app_name">CarShare</string>
    <string name="buttonRepeatConnect">Повторить попытку</string>
    <string name="warningNoConnection">Нет подключения к интернету</string>
    <string name="no_connection">no connection</string>
    <string name="CheckEthernet">Проверьте подключение и повторите попытку</string>
    <string name="FindNextRide">Поможем найти твою следующую поездку</string>
    <string name="skipBtn">Пропустить</string>
    <string name="RentCar">Аренда автомобилей</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="LogoDriveNext">DriveNext</string>
    <string name="Next">Далее</string>
    <string name="PhotoExportInfo">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="CompleteRegistrationText">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="SubWelcomeText1">Открой для себя удобный и доступный способ передвижения</string>
    <string name="WelcomeLogo1">WelcomeLogo1</string>
    <string name="WelcomeText2">Безоспасно и удобно</string>
    <string name="SubWelcomeText2">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="welcomelogo3">WelcomeLogo3</string>
    <string name="WelcomeText3">Лучшие предложения</string>
    <string name="SubWelcomeText3">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="Go">Поехали</string>
    <string name="SignIn">Войти</string>
    <string name="SignUp">Зарегистрироваться</string>
    <string name="mainlogo">MainLogo</string>
    <string name="SignInWithGoogle">Войти через Google</string>
    <string name="ForgetPassword">Забыли пароль?</string>
    <string name="EnterPassword">Введите пароль</string>
    <string name="password">Пароль</string>
    <string name="EnterEmail">Введите электронную почту</string>
    <string name="Email">Электронная почта</string>
    <string name="PleaseEnterData">Пожалуйста, введите свои данные</string>
    <string name="EnterAccount">Войдите в аккаунт</string>
    <string name="goback">GoBack</string>
    <string name="createaccount">Создать аккаунт</string>
    <string name="usewithpleasure">Пользуйтесь с удовольствием</string>
    <string name="congrats">Поздравляем</string>
    <string name="email">Электронная почта</string>
    <string name="enteremail">Введите электронную почту</string>
    <string name="thinkuppassword">Придумайте пароль</string>
    <string name="enterpassword">Введите пароль</string>
    <string name="repeatpassword">Повторите пароль</string>
    <string name="agreewithconditions">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="notcheckagree">Вы не подтвердили соглашение</string>
    <string name="surname">Фамилия</string>
    <string name="entersurname">Введите фамилию</string>
    <string name="name">Имя</string>
    <string name="entername">Введите имя</string>
    <string name="middlename">Отчество</string>
    <string name="entermiddlename">Введите отчество</string>
    <string name="birthdate">Дата рождения</string>
    <string name="datemask">DD/MM/YYYY</string>
    <string name="gender">Пол</string>
    <string name="genderman">Мужской</string>
    <string name="genderwoman">Женский</string>
    <string name="addavatar">Добавьте аватарку</string>
    <string name="drivinglicensenumber">Номер водительского удостоверения</string>
    <string name="drivinglicensemask">0000000000</string>
    <string name="DLDate">Дата выдачи</string>
    <string name="enterDLPhoto">Загрузите фото водительского удостоверения</string>
    <string name="uploadPhoto">Загрузить фото</string>
    <string name="uploadPassportPhoto">Загрузите фото пасспорта</string>
    <string name="welcomelogo2">Логотип Безопасности\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Настройки</string>
    <string name="addAvatar">Добавить аватар</string>
</resources>