<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginActivity">


    <LinearLayout
        android:id="@+id/llDataFCs"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSurname"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/surname" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxStrokeColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSurname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/entersurname"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvName"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gray">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/entername"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvMiddleName"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/middlename" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gray">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMiddleName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/entermiddlename"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvBirthDate"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/birthdate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gray">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputBirthDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:hint="@string/datemask"
                android:inputType="date"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvGender"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioMale"
                style="@style/SideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/genderman"
                android:layout_marginEnd="16dp"/>

            <RadioButton
                android:id="@+id/radioFemale"
                style="@style/SideText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderwoman" />

        </RadioGroup>
    </LinearLayout>



    <Button
        android:id="@+id/btnNext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_roundedbtn"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>