<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginActivity">

    <TextView
        android:id="@+id/tvMainLogin"
        style="@style/Header1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/EnterAccount"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTextLogin"
        style="@style/SideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/PleaseEnterData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMainLogin" />


    <LinearLayout
        android:id="@+id/llDataLogin"
        android:layout_width="350dp"
        android:layout_height="230dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTextLogin">

        <TextView
            android:id="@+id/tvMailText"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxStrokeColor="@color/gray"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/EnterEmail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassText"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxStrokeColor="@color/gray"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/EnterPassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgetPassword"
        style = "@style/BtnTransparentStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDataLogin" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_roundedbtn"
        android:text="@string/SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForget" />

    <Button
        android:id="@+id/btnLogGoogle"
        style="@style/BtnOutlineStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_roundedbtntransparent"
        android:text="@string/SignInWithGoogle"
        android:drawableLeft="@drawable/ic_google_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLog" />

    <Button
        android:id="@+id/btnRegistration"
        style="@style/BtnTransparentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogGoogle" />
</androidx.constraintlayout.widget.ConstraintLayout>