<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SplashActivity">

    <ImageView
        android:id="@+id/ivMainLogo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/mainlogo"
        android:src="@drawable/load"
        app:layout_constraintBottom_toTopOf="@+id/btnLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTextSplash" />

    <TextView
        android:id="@+id/tvSplashHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        style="@style/Header1Colorful"
        android:text="@string/LogoDriveNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvSubTextSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        style = "@style/BaseText"
        android:text="@string/FindNextRide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSplashHeader" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/SignIn"
        android:background="@drawable/shape_roundedbtn"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/SignUp"
        android:background="@drawable/shape_roundedbtntransparent"
        style = "@style/BtnTransparentStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>