<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginActivity">


    <LinearLayout
        android:id="@+id/llDataRegistration"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMail"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxStrokeColor="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enteremail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPass"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/thinkuppassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gray"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterpassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassRepeat"
            style="@style/SideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/repeatpassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gray"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassRepeat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enterpassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbAgreement"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/agreewithconditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDataRegistration" />

    <TextView
        android:id="@+id/tvCheckBoxError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/notcheckagree"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAgreement" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_roundedbtn"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>